# bootc-jetson

./: .pre-commit-config.yaml  README.md  docker-bake.hcl  justfile
.github/: image-variants.json
.github/workflows/: build.yaml  ci.yaml
jetson-tools/: Cargo.toml  README.md
jetson-tools/crates/jetson-qspi-update/: Cargo.toml
jetson-tools/crates/jetson-qspi-update/src/: capsule.rs  esp.rs  lib.rs  main.rs  nvbootctrl.rs  osindications.rs  version.rs
orin/: Dockerfile
orin/rootfs/etc/dracut.conf.d/: fix-bootc.conf
orin/rootfs/etc/tmpfiles.d/: home.conf  systemd-resolve.conf
orin/rootfs/usr/lib/bootc/kargs.d/: 00-serial-console.toml
orin/rootfs/usr/lib/composefs/: setup-root-conf.toml
orin/rootfs/usr/lib/dracut.conf.d/: 10-jetson.conf
orin/rootfs/usr/lib/kernel/: install.conf
orin/rootfs/usr/lib/modprobe.d/: blacklist-realtek-radio.conf
orin/rootfs/usr/lib/modules-load.d/: nvidia-tegra.conf
orin/rootfs/usr/lib/repart.d/: 00-root.conf
orin/rootfs/usr/lib/systemd/system/: jetson-qspi-update.service
orin/rootfs/usr/lib/sysusers.d/: bootc-jetson.conf  ubuntu-sysusers.conf
orin/rootfs/usr/lib/tmpfiles.d/: bootc-base-dirs.conf  dpkg-sysimage.conf  nvidia-l4t.conf
orin/rootfs/usr/libexec/: jetson-qspi-update
scripts/: flash.sh
thor/: Dockerfile
thor/rootfs/usr/lib/bootc/install/: 00-jetson.toml
thor/rootfs/usr/lib/bootc/kargs.d/: 00-serial-console.toml  (+1 more)
thor/rootfs/usr/lib/composefs/: setup-root-conf.toml
thor/rootfs/usr/lib/modprobe.d/: blacklist-nvgpu-nouveau.conf  blacklist-realtek-radio.conf  nvidia-defer-autoload.conf
thor/rootfs/usr/lib/modules-load.d/: nvidia-tegra.conf
thor/rootfs/usr/lib/ostree/: prepare-root.conf
thor/rootfs/usr/lib/sysusers.d/: bootc-jetson.conf
(+5 files in other folders)
