[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
repository = "https://github.com/yeetypete/bootc-jetson"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustix = { version = "1", features = ["mount", "fs"] }
semver = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
